packages/jsii/test/negatives/neg.enum-name.2.ts
///!MATCH_ERROR: Type names must use pascal-case: My_Enum

export enum My_Enum {
    Foo,
    Goo
}
